tests/conc/reject/container.ty
fn f(n: int) -> int:
    return n
fn main():
    ts := [spawn f(1)]
    print(str(len(ts)))
